# define-xml-validator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: CLI_USAGE.md
examples/: basic_usage.py  ci_integration.py
schemas/: README.md
src/define_validator/: __init__.py  advanced_validations.py  cli.py  report_generator.py  schema_manager.py  validator.py
tests/: __init__.py  test_validator.py
tests/fixtures/: README.md
